Some basic stuff

--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,14 +1,20 @@
 {
     "debug": true,
     "log_level": "INFO",
-    "log_file": ".log/client.log",
-    "log_error_file": ".log/client-error.log",
+    "log_file_path": ".log/client.log",
+    "log_error_file_path": ".log/client-error.log",
     "log_file_size": 10485760,
     "log_file_backup_count": 5,
     "log_file_encoding": "utf-8",
     "log_error_level": "ERROR",
     "ipfs_import_mode": "api",
     "ipfs_api_host": "/ip4/127.0.0.1/tcp/5001",
+    "mfs_path_uuid": "35618d66-a04c-4b26-aa70-acb38ce29e6f",
     "snapshot_dowload_mode": "url",
-    "snapshot_url": ""
+    "snapshot_url": "",
+    "snapshot_file_folder": ".snapshot",
+    "ddns_mode": "cloudflare",
+    "ipns_domain": "content.example.com",
+    "ddns_cloudflare_email": "",
+    "ddns_cloudflare_api_key": ""
 }
